--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /*.lua
 extensions/*.lua
 entities/*.lua
+actors/*.lua
 views/*.lua
 build/*
 game_plays/*lua
@@ -14,3 +15,6 @@ game_plays/colony/entities/*lua
 lib/map_gen.lua
 lib/voronoi.lua
 tmp
+inspiration/
+screenshots/
+presskit/
